--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,13 @@ Welcome to UBG
 
 <body>
 
+<nav>
+<ul>
+<li><a href="index.html" >Home</a></li>
+<li><a href="news.html" >News</a></li>
+</ul>
+</nav>
+
 {{content}}
 
 </body>
