--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,14 +9,16 @@ Welcome to UBG
 
 <body>
 
-<nav>
-<ul>
-<li><a href="{{site.baseurl}}/index.html" >Home</a></li>
-<li><a href="{{site.baseurl}}/news.html" >News</a></li>
-</ul>
-</nav>
+{%include nav.html %}
 
 {{content}}
+
+{%include nav.html %}
+
+<footer>
+<p> &copy 2016 dkoffers git hub
+</p>
+</footer>
 
 </body>
 
