--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,9 @@
 <nav>
-<ul>
-<li><a href="{{site.baseurl}}/index.html" >Home</a></li>
-<li><a href="{{site.baseurl}}/news.html" >News</a></li>
-<li><a href="{{site.baseurl}}/text.html" > Texts </a></li>
-</ul>
+  <ul class="{{include.navclass}}">
+
+    <li> <a href="{{site.baseurl}}/index.html" class="{% if page.url == '/index.html' %}current{% endif %}"> Home </a> </li>
+    <li> <a href="{{site.baseurl}}/news.html" class="{% if page.url == '/news.html' %}current{% endif %}"> News </a> </li>
+    <li> <a href="{{site.baseurl}}/text.html" class="{% if page.url == '/text.html' %}current{% endif %}"> Texts </a></li>
+  </ul>
 </nav>
 
