--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,11 +10,11 @@ Welcome to UBG
 
 <body>
 
-{%include nav.html %}
+{%include nav.html navclass = 'nav-top'%}
 
 {{content}}
 
-{%include nav.html %}
+{%include nav.html navclass = 'nav-bottom'%}
 
 <footer>
 <p> &copy 2016 dkoffers git hub
